--- a/main.css
+++ b/main.css
@@ -140,7 +140,7 @@ aside i.fa {
 
 
   @media screen and (max-width: 769px),
-  screen and  (-webkit-min-device-pixel-ratio: 2){
+  screen  (-webkit-min-device-pixel-ratio: 2){
     /*write your css in this code block*/
     aside {
       display:none;
